Layout fix for ActivityView.tpl (Details cell needs to wrap).
git-svn-id: http://svn.civicrm.org/civicrm/trunk@12984 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/css/civicrm.css
+++ b/css/civicrm.css
@@ -256,6 +256,10 @@ border-top-style: none;
   vertical-align: top;
 }
 
+#crm-container .form-layout .buttons, #crm-container .form-layout-compressed .buttons {
+ padding-top: 10px;
+}
+
 #crm-container .form-layout-compressed td.describe-image {
     vertical-align: top;
     padding: 0.5em 0em 0em 0em;
